Fixed css alignment for extra large screen

--- a/src/components/StickyNotes/_StickyNotes.scss
+++ b/src/components/StickyNotes/_StickyNotes.scss
@@ -54,7 +54,7 @@
         }
 
         @include responsive.respond-to(xl) {
-            max-width: 100rem;
+            max-width: 125rem;
             margin: 0 auto;
         }
 
